<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/androidparty" android:id="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/welcome_page_cupcake_img_desc"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/welcome_page_top_left_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:fontFamily="monospace" android:textSize="20sp"
            android:textColor="@android:color/background_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:text="@string/welcome_page_bottom__right_exit_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:textColor="@android:color/holo_red_dark" android:textSize="18sp"/>
    <TextView
            android:text="@string/welcome_page_button_top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.787"
            app:layout_constraintVertical_bias="0.431"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp" android:layout_marginEnd="100dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintBottom_toTopOf="@+id/button"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/welcome_page_button_dec"
            android:layout_width="262dp"
            android:layout_height="35dp" android:id="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            android:fontFamily="monospace" android:layout_marginTop="184dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.496"/>
    <ImageView
            android:layout_width="232dp"
            android:layout_height="354dp" app:srcCompat="@drawable/lets__get_this_party_started"
            android:id="@+id/imageView6"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.82"
            android:contentDescription="@string/welcome_page_age_reveal_correct_wrong_pic"/>
</androidx.constraintlayout.widget.ConstraintLayout>